--- a/_includes/post_detail.html
+++ b/_includes/post_detail.html
@@ -1,9 +1,10 @@
 <h1 class="entry-title">
 {% if page.title %}
-    <a href="{{ root_url }}{{ page.url }}">{{ page.title }}</a>
+    <a href="{{ root_url }}{{ page.url }}">{{ page.title }}</a><br>
 {% endif %}
 {% if post.title %}
     <a href="{{ root_url }}{{ post.url }}">{{ post.title }}</a>
 {% endif %}
 </h1>
+<p class="meta">{{ page.date | date_to_string }}</p>
 <div class="entry-content">{{ content }}</div>
