--- a/_includes/post_detail.html
+++ b/_includes/post_detail.html
@@ -6,5 +6,5 @@
     <a href="{{ root_url }}{{ post.url }}">{{ post.title }}</a>
 {% endif %}
 </h1>
-<p class="meta">{{ page.date | date_to_string }}</p>
+<p class="meta">{{ post.date | date_to_string }}</p>
 <div class="entry-content">{{ content }}</div>
