--- a/_includes/post_detail.html
+++ b/_includes/post_detail.html
@@ -1,4 +1,4 @@
-<img src="drawing.jpg" alt="Drawing" style="width: 100px;"/>
+<img src="/images/avatar.png" alt="Drawing" style="width: 100px;"/>
 <h1 class="entry-title">
 {% if page.title %}
     <a href="{{ root_url }}{{ page.url }}">{{ page.title }}</a><br>
