--- a/_includes/post_detail.html
+++ b/_includes/post_detail.html
@@ -1,5 +1,5 @@
-<img src="/images/avatar.png" alt="Drawing" style="width: 100px;"/>
 <h1 class="entry-title">
+<img src="/images/avatar.png" style="width: 100px;"/>
 {% if page.title %}
     <a href="{{ root_url }}{{ page.url }}">{{ page.title }}</a><br>
 {% endif %}
