--- a/_includes/post_detail.html
+++ b/_includes/post_detail.html
@@ -1,5 +1,5 @@
 <h1 class="entry-title">
-<img style="vertical-align:middle" src="/images/avatar.png" style="width: 100px;"/>
+<img style="vertical-align:middle" class="img-circle" src="/images/avatar.png" style="width: 100px;"/>
 {% if page.title %}
     <a href="{{ root_url }}{{ page.url }}">{{ page.title }}</a><br>
 {% endif %}
